--- a/ai_template_generator_app/index.html
+++ b/ai_template_generator_app/index.html
@@ -20,7 +20,7 @@
 </head>
 <body class="bg-slate-900 text-slate-100">
     <div id="root"></div>
-    <script type="module" src="./index.tsx"></script>
-<script type="module" src="/index.tsx"></script>
+    <script type="module" src="./index.js"></script>
+<script type="module" src="/index.js"></script>
 </body>
 </html>
