--- a/ai_template_generator_app/index.html
+++ b/ai_template_generator_app/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -19,6 +18,7 @@
 </head>
 <body class="bg-slate-900 text-slate-100">
     <div id="root"></div>
+    {/* This script expects index.js to be in the same directory as this index.html file. */}
     <script type="module" src="./index.js"></script>
 </body>
 </html>
