--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
 
     <main>
         <section id="template-generator-section" style="padding: 20px; background-color: #1a202c; /* Example dark background */">
-            <div id="magnificent-template-generator-app-root">
+            <div id="magnificent-website-template-generator-app-root">
                 <!-- The React app will load here -->
                 <p style="color: white; text-align: center;">Loading Template Generator...</p>
             </div>
@@ -612,7 +612,7 @@
 
     <script src="script.js"></script>
     
-    <script type="module" src="magnificent-app/index.tsx"></script> <!-- React app's entry point -->
+    <script type="module" src="magnificent-website-template-generator/index.tsx"></script> <!-- React app's entry point -->
     
 </body>
 </html>
