--- a/index.html
+++ b/index.html
@@ -612,7 +612,7 @@
 
     <script src="script.js"></script>
     
-    <script type="module" src="magnificent-website-template-generator/index.tsx"></script> <!-- React app's entry point -->
+    <script type="module" src="magnificent-website-template-generator/index.js"></script> <!-- React app's entry point -->
     
 </body>
 </html>
