--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-    <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -920,7 +920,7 @@
 
     <script src="script.js"></script>
     
-    <script type="module" src="magnificent-website-template-generator/index.js"></script> <!-- React app's entry point -->
+    <script type="module" src="scripts/index.js"></script> <!-- React app's entry point -->
     
 </body>
 </html>
