--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
     <style>
         #ai-website-generator-app {
             font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
-            background-color: #f4f7f9;
-            color: #333;
+            background-color: black;
+            color: white;
             line-height: 1.6;
             /* Styles like margin, display:flex, min-height are removed as the host page controls the block */
             /* You can add a border or default padding if desired for the embedded block */
@@ -55,7 +55,7 @@
         }
 
         #ai-website-generator-app header h1 {
-            color: #2c3e50;
+            color: #00FFFF;
             font-size: 2.5em;
             margin: 0;
         }
@@ -70,13 +70,13 @@
 
         #ai-website-generator-app .input-section h2 {
             margin-top: 0;
-            color: #34495e;
+            color: #00FFFF;
             font-size: 1.8em;
         }
 
         #ai-website-generator-app .input-section p {
             font-size: 0.95em;
-            color: #555;
+            color: #00FFFF;
             margin-bottom: 15px;
         }
 
@@ -94,7 +94,7 @@
         }
 
         #ai-website-generator-app button#generate-button {
-            background-color: #3498db;
+            background-color: #00FFFF;
             color: white;
             border: none;
             padding: 12px 25px;
