--- a/index.html
+++ b/index.html
@@ -25,18 +25,21 @@
     <link rel="icon" href="/img/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
+    <!-- This is your main stylesheet for the whole site -->
     <link rel="stylesheet" href="style.css">
+    
     <link rel="canonical" href="https://realmstoriches.github.io/">
+    
+    <!-- These styles are ONLY for the AI Generator App -->
     <style>
-        /* Updated styles for the AI Website Generator App to match the site's theme */
         #ai-website-generator-app {
             font-family: Arial, sans-serif;
-            background-color: var(--secondary-bg-color);
-            color: var(--primary-text-color);
+            background-color: var(--secondary-bg-color, #1a1a1a);
+            color: var(--primary-text-color, #f0f0f0);
             line-height: 1.6;
             padding: 20px 0;
             border-radius: 10px;
-            border: 1px solid var(--border-color);
+            border: 1px solid var(--border-color, rgba(0, 255, 255, .3));
             margin-bottom: 40px;
         }
 
@@ -50,30 +53,30 @@
         #ai-website-generator-app header {
             text-align: center;
             margin-bottom: 30px;
-            border-bottom: 1px solid var(--border-color);
+            border-bottom: 1px solid var(--border-color, rgba(0, 255, 255, .3));
             padding-bottom: 20px;
         }
 
         #ai-website-generator-app header h1 {
-            color: var(--accent-color);
+            color: var(--accent-color, #0ff);
             font-size: 2.5em;
             margin: 0;
         }
 
         #ai-website-generator-app .input-section,
         #ai-website-generator-app .output-section {
-            background-color: var(--card-bg-color);
+            background-color: var(--card-bg-color, #0a0a0a);
             padding: 25px;
             border-radius: 8px;
             box-shadow: 0 5px 20px rgba(0, 255, 255, .15);
-            border: 1px solid var(--border-color);
+            border: 1px solid var(--border-color, rgba(0, 255, 255, .3));
             margin-bottom: 30px;
         }
 
         #ai-website-generator-app .input-section h2,
         #ai-website-generator-app .output-section h2 {
             margin-top: 0;
-            color: var(--accent-color);
+            color: var(--accent-color, #0ff);
             font-size: 1.8em;
         }
 
@@ -86,26 +89,26 @@
         #ai-website-generator-app textarea#prompt-input {
             width: 100%;
             padding: 12px;
-            border: 1px solid var(--border-color);
+            border: 1px solid var(--border-color, rgba(0, 255, 255, .3));
             border-radius: 6px;
             font-size: 1em;
             min-height: 100px;
             margin-bottom: 15px;
             resize: vertical;
             box-sizing: border-box;
-            background-color: var(--input-bg-color);
-            color: var(--primary-text-color);
+            background-color: var(--input-bg-color, #1a1a1a);
+            color: var(--primary-text-color, #f0f0f0);
         }
 
         #ai-website-generator-app textarea#prompt-input:focus {
-            border-color: var(--accent-color);
+            border-color: var(--accent-color, #0ff);
             outline: none;
             box-shadow: 0 0 8px rgba(0, 255, 255, .6);
         }
 
         #ai-website-generator-app button#generate-button {
-            background-color: var(--button-bg-primary);
-            color: var(--button-text-primary);
+            background-color: var(--button-bg-primary, #0ff);
+            color: var(--button-text-primary, #000);
             border: none;
             padding: 12px 25px;
             font-size: 1.1em;
@@ -120,12 +123,12 @@
         }
 
         #ai-website-generator-app button#generate-button:hover {
-            background-color: var(--accent-color);
+            background-color: var(--accent-color, #0ff);
             box-shadow: 0 0 15px rgba(0, 255, 255, .7);
         }
 
         #ai-website-generator-app button#generate-button:disabled {
-            background-color: var(--button-bg-secondary);
+            background-color: var(--button-bg-secondary, #333);
             color: #888;
             cursor: not-allowed;
         }
@@ -138,7 +141,7 @@
             padding: 20px;
             margin-top: 20px;
             text-align: center;
-            color: var(--primary-text-color);
+            color: var(--primary-text-color, #f0f0f0);
         }
 
         #ai-website-generator-app .spinner {
@@ -146,7 +149,7 @@
             width: 36px;
             height: 36px;
             border-radius: 50%;
-            border-left-color: var(--accent-color);
+            border-left-color: var(--accent-color, #0ff);
             animation: spin 1s ease infinite;
             margin-bottom: 10px;
         }
@@ -162,7 +165,7 @@
         }
 
         #ai-website-generator-app .output-section h2 {
-            border-bottom: 1px solid var(--border-color);
+            border-bottom: 1px solid var(--border-color, rgba(0, 255, 255, .3));
             padding-bottom: 10px;
             margin-bottom: 20px;
         }
@@ -173,7 +176,7 @@
 
         #ai-website-generator-app .preview-area h3,
         #ai-website-generator-app .code-area h4 {
-            color: var(--accent-color);
+            color: var(--accent-color, #0ff);
             font-size: 1.4em;
             margin-bottom: 10px;
         }
@@ -181,7 +184,7 @@
         #ai-website-generator-app iframe#preview-frame {
             width: 100%;
             height: 500px;
-            border: 1px solid var(--border-color);
+            border: 1px solid var(--border-color, rgba(0, 255, 255, .3));
             border-radius: 6px;
             background-color: #fff;
         }
@@ -194,10 +197,10 @@
         #ai-website-generator-app .tab-button {
             padding: 10px 20px;
             cursor: pointer;
-            border: 1px solid var(--border-color);
+            border: 1px solid var(--border-color, rgba(0, 255, 255, .3));
             border-bottom: none;
-            background-color: var(--button-bg-secondary);
-            color: var(--primary-text-color);
+            background-color: var(--button-bg-secondary, #333);
+            color: var(--primary-text-color, #f0f0f0);
             margin-right: 5px;
             border-radius: 6px 6px 0 0;
             font-size: 1em;
@@ -205,9 +208,9 @@
         }
 
         #ai-website-generator-app .tab-button.active {
-            background-color: var(--card-bg-color);
-            border-bottom: 1px solid var(--card-bg-color);
-            color: var(--accent-color);
+            background-color: var(--card-bg-color, #0a0a0a);
+            border-bottom: 1px solid var(--card-bg-color, #0a0a0a);
+            color: var(--accent-color, #0ff);
             font-weight: bold;
             position: relative;
             z-index: 1;
@@ -218,15 +221,15 @@
         }
 
         #ai-website-generator-app .tab-panel {
-            border: 1px solid var(--border-color);
+            border: 1px solid var(--border-color, rgba(0, 255, 255, .3));
             padding: 20px;
             border-radius: 0 6px 6px 6px;
-            background-color: var(--card-bg-color);
+            background-color: var(--card-bg-color, #0a0a0a);
         }
 
         #ai-website-generator-app .tab-panel h4 {
             margin-top: 0;
-            color: var(--accent-color);
+            color: var(--accent-color, #0ff);
         }
 
         #ai-website-generator-app pre {
@@ -247,9 +250,9 @@
         }
 
         #ai-website-generator-app .copy-button {
-            background-color: var(--button-bg-secondary);
-            color: var(--button-text-secondary);
-            border: 1px solid var(--accent-color);
+            background-color: var(--button-bg-secondary, #333);
+            color: var(--button-text-secondary, #0ff);
+            border: 1px solid var(--accent-color, #0ff);
             padding: 8px 15px;
             font-size: 0.9em;
             border-radius: 4px;
@@ -260,12 +263,12 @@
         }
 
         #ai-website-generator-app .copy-button:hover {
-            background-color: var(--accent-color);
-            color: var(--button-text-primary);
+            background-color: var(--accent-color, #0ff);
+            color: var(--button-text-primary, #000);
         }
 
         #ai-website-generator-app .error-message {
-            background-color: var(--error-color);
+            background-color: var(--error-color, #dc3545);
             color: white;
             padding: 15px;
             border-radius: 6px;
@@ -280,63 +283,6 @@
             margin-top: 30px;
             color: #888;
             font-size: 0.9em;
-        }
-
-        /* Responsive adjustments */
-        @media (max-width: 768px) {
-            #ai-website-generator-app header h1 {
-                font-size: 2em;
-            }
-
-            #ai-website-generator-app .input-section h2,
-            #ai-website-generator-app .output-section h2 {
-                font-size: 1.5em;
-            }
-
-            #ai-website-generator-app .preview-area h3,
-            #ai-website-generator-app .code-area h4 {
-                font-size: 1.2em;
-            }
-
-            #ai-website-generator-app button#generate-button {
-                font-size: 1em;
-                padding: 10px 20px;
-            }
-
-            #ai-website-generator-app iframe#preview-frame {
-                height: 400px;
-            }
-
-            #ai-website-generator-app .tabs {
-                flex-wrap: wrap;
-            }
-
-            #ai-website-generator-app .tab-button {
-                margin-bottom: 5px;
-            }
-        }
-
-        @media (max-width: 480px) {
-            #ai-website-generator-app .container {
-                width: 95%;
-                padding: 15px;
-            }
-
-            #ai-website-generator-app header h1 {
-                font-size: 1.8em;
-            }
-
-            #ai-website-generator-app textarea#prompt-input {
-                min-height: 80px;
-            }
-
-            #ai-website-generator-app iframe#preview-frame {
-                height: 300px;
-            }
-
-            #ai-website-generator-app pre {
-                font-size: 0.85em;
-            }
         }
     </style>
 
@@ -451,7 +397,7 @@
     </div>
 
     <main>
-        <div class="container"> <!-- Added a container to center the app -->
+        <div class="container"> 
             <div id="ai-website-generator-app">
                 <div class="container">
                     <header>
