--- a/index.html
+++ b/index.html
@@ -25,266 +25,10 @@
     <link rel="icon" href="/img/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-    <!-- This is your main stylesheet for the whole site -->
+    <!-- Main stylesheet for the entire site -->
     <link rel="stylesheet" href="scripts/style.css">
     
     <link rel="canonical" href="https://realmstoriches.github.io/">
-    
-    <!-- These styles are ONLY for the AI Generator App -->
-    <style>
-        #ai-website-generator-app {
-            font-family: Arial, sans-serif;
-            background-color: var(--secondary-bg-color, #1a1a1a);
-            color: var(--primary-text-color, #f0f0f0);
-            line-height: 1.6;
-            padding: 20px 0;
-            border-radius: 10px;
-            border: 1px solid var(--border-color, rgba(0, 255, 255, .3));
-            margin-bottom: 40px;
-        }
-
-        #ai-website-generator-app .container {
-            width: 90%;
-            max-width: 1200px;
-            margin: 0 auto;
-            padding: 20px;
-        }
-
-        #ai-website-generator-app header {
-            text-align: center;
-            margin-bottom: 30px;
-            border-bottom: 1px solid var(--border-color, rgba(0, 255, 255, .3));
-            padding-bottom: 20px;
-        }
-
-        #ai-website-generator-app header h1 {
-            color: var(--accent-color, #0ff);
-            font-size: 2.5em;
-            margin: 0;
-        }
-
-        #ai-website-generator-app .input-section,
-        #ai-website-generator-app .output-section {
-            background-color: var(--card-bg-color, #0a0a0a);
-            padding: 25px;
-            border-radius: 8px;
-            box-shadow: 0 5px 20px rgba(0, 255, 255, .15);
-            border: 1px solid var(--border-color, rgba(0, 255, 255, .3));
-            margin-bottom: 30px;
-        }
-
-        #ai-website-generator-app .input-section h2,
-        #ai-website-generator-app .output-section h2 {
-            margin-top: 0;
-            color: var(--accent-color, #0ff);
-            font-size: 1.8em;
-        }
-
-        #ai-website-generator-app .input-section p {
-            font-size: 0.95em;
-            color: #ccc;
-            margin-bottom: 15px;
-        }
-
-        #ai-website-generator-app textarea#prompt-input {
-            width: 100%;
-            padding: 12px;
-            border: 1px solid var(--border-color, rgba(0, 255, 255, .3));
-            border-radius: 6px;
-            font-size: 1em;
-            min-height: 100px;
-            margin-bottom: 15px;
-            resize: vertical;
-            box-sizing: border-box;
-            background-color: var(--input-bg-color, #1a1a1a);
-            color: var(--primary-text-color, #f0f0f0);
-        }
-
-        #ai-website-generator-app textarea#prompt-input:focus {
-            border-color: var(--accent-color, #0ff);
-            outline: none;
-            box-shadow: 0 0 8px rgba(0, 255, 255, .6);
-        }
-
-        #ai-website-generator-app button#generate-button {
-            background-color: var(--button-bg-primary, #0ff);
-            color: var(--button-text-primary, #000);
-            border: none;
-            padding: 12px 25px;
-            font-size: 1.1em;
-            font-weight: 700;
-            border-radius: 6px;
-            cursor: pointer;
-            transition: all 0.3s ease;
-            display: block;
-            width: 100%;
-            max-width: 300px;
-            margin: 0 auto;
-        }
-
-        #ai-website-generator-app button#generate-button:hover {
-            background-color: var(--accent-color, #0ff);
-            box-shadow: 0 0 15px rgba(0, 255, 255, .7);
-        }
-
-        #ai-website-generator-app button#generate-button:disabled {
-            background-color: var(--button-bg-secondary, #333);
-            color: #888;
-            cursor: not-allowed;
-        }
-
-        #ai-website-generator-app .loading-indicator {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            padding: 20px;
-            margin-top: 20px;
-            text-align: center;
-            color: var(--primary-text-color, #f0f0f0);
-        }
-
-        #ai-website-generator-app .spinner {
-            border: 4px solid rgba(255, 255, 255, 0.1);
-            width: 36px;
-            height: 36px;
-            border-radius: 50%;
-            border-left-color: var(--accent-color, #0ff);
-            animation: spin 1s ease infinite;
-            margin-bottom: 10px;
-        }
-
-        @keyframes spin {
-            0% {
-                transform: rotate(0deg);
-            }
-
-            100% {
-                transform: rotate(360deg);
-            }
-        }
-
-        #ai-website-generator-app .output-section h2 {
-            border-bottom: 1px solid var(--border-color, rgba(0, 255, 255, .3));
-            padding-bottom: 10px;
-            margin-bottom: 20px;
-        }
-
-        #ai-website-generator-app .preview-area {
-            margin-bottom: 30px;
-        }
-
-        #ai-website-generator-app .preview-area h3,
-        #ai-website-generator-app .code-area h4 {
-            color: var(--accent-color, #0ff);
-            font-size: 1.4em;
-            margin-bottom: 10px;
-        }
-
-        #ai-website-generator-app iframe#preview-frame {
-            width: 100%;
-            height: 500px;
-            border: 1px solid var(--border-color, rgba(0, 255, 255, .3));
-            border-radius: 6px;
-            background-color: #fff;
-        }
-
-        #ai-website-generator-app .tabs {
-            display: flex;
-            margin-bottom: -1px;
-        }
-
-        #ai-website-generator-app .tab-button {
-            padding: 10px 20px;
-            cursor: pointer;
-            border: 1px solid var(--border-color, rgba(0, 255, 255, .3));
-            border-bottom: none;
-            background-color: var(--button-bg-secondary, #333);
-            color: var(--primary-text-color, #f0f0f0);
-            margin-right: 5px;
-            border-radius: 6px 6px 0 0;
-            font-size: 1em;
-            transition: background-color 0.2s ease, color 0.2s ease;
-        }
-
-        #ai-website-generator-app .tab-button.active {
-            background-color: var(--card-bg-color, #0a0a0a);
-            border-bottom: 1px solid var(--card-bg-color, #0a0a0a);
-            color: var(--accent-color, #0ff);
-            font-weight: bold;
-            position: relative;
-            z-index: 1;
-        }
-
-        #ai-website-generator-app .tab-button:hover:not(.active) {
-            background-color: #444;
-        }
-
-        #ai-website-generator-app .tab-panel {
-            border: 1px solid var(--border-color, rgba(0, 255, 255, .3));
-            padding: 20px;
-            border-radius: 0 6px 6px 6px;
-            background-color: var(--card-bg-color, #0a0a0a);
-        }
-
-        #ai-website-generator-app .tab-panel h4 {
-            margin-top: 0;
-            color: var(--accent-color, #0ff);
-        }
-
-        #ai-website-generator-app pre {
-            background-color: #2d2d2d;
-            color: #f8f8f2;
-            padding: 15px;
-            border-radius: 6px;
-            overflow-x: auto;
-            font-family: "SFMono-Regular", Consolas, "Liberation Mono", Menlo, Courier, monospace;
-            font-size: 0.9em;
-            line-height: 1.5;
-            max-height: 400px;
-            border: 1px solid #444;
-        }
-
-        #ai-website-generator-app code {
-            font-family: inherit;
-        }
-
-        #ai-website-generator-app .copy-button {
-            background-color: var(--button-bg-secondary, #333);
-            color: var(--button-text-secondary, #0ff);
-            border: 1px solid var(--accent-color, #0ff);
-            padding: 8px 15px;
-            font-size: 0.9em;
-            border-radius: 4px;
-            cursor: pointer;
-            transition: background-color 0.3s ease, color .3s ease;
-            float: right;
-            margin-bottom: 10px;
-        }
-
-        #ai-website-generator-app .copy-button:hover {
-            background-color: var(--accent-color, #0ff);
-            color: var(--button-text-primary, #000);
-        }
-
-        #ai-website-generator-app .error-message {
-            background-color: var(--error-color, #dc3545);
-            color: white;
-            padding: 15px;
-            border-radius: 6px;
-            margin-top: 20px;
-            text-align: center;
-            font-size: 1em;
-        }
-
-        #ai-website-generator-app footer {
-            text-align: center;
-            padding: 20px;
-            margin-top: 30px;
-            color: #888;
-            font-size: 0.9em;
-        }
-    </style>
 
     <script type="importmap">
         {
@@ -406,7 +150,7 @@
                     <main>
                         <section class="input-section" aria-labelledby="input-heading">
                             <h2 id="input-heading">Describe Your Desired Website</h2>
-                            <p>Enter a detailed description of the website you want to create. For example: "A modern landing page for a SaaS product with a hero section, features list, pricing table, and a contact form."</p>
+                            <p>Enter a detailed description of the website you want to create. For example: "A modern landing page for a SaaS product with a hero section, features list, a pricing table, and a contact form."</p>
                             <textarea id="prompt-input" rows="6" placeholder="e.g., A personal blog theme, clean and minimalist, with a sidebar for recent posts..." aria-label="Website description prompt"></textarea>
                             <button id="generate-button" type="button">Generate Website</button>
                             <div id="loading-indicator" class="loading-indicator" style="display: none;" role="status" aria-live="polite">
