--- a/index.html
+++ b/index.html
@@ -30,6 +30,14 @@
     
     <link rel="canonical" href="https://realmstoriches.github.io/">
 
+    <style>
+      html, body {
+        background-color: #000 !important;
+      }
+    </style>
+    <!-- END OF OVERRIDE CODE BLOCK -->
+
+
     <script type="importmap">
         {
             "imports": {
