--- a/index.html
+++ b/index.html
@@ -81,7 +81,13 @@
 
 <body>
 
+    <!-- CORRECTED STRUCTURE (Copy and paste this entire block) -->
+
+<body>
+
     <div id="main-popup-container" class="popup-overlay">
+        
+        <!-- Cookie Consent Pop-up (correctly inside) -->
         <div id="cookie-consent-content" class="popup-content">
             <h2>Cookie Consent</h2>
             <p>We use cookies to ensure you get the best experience on our website. By continuing, you agree to our use of cookies.</p>
@@ -90,29 +96,31 @@
                 <button id="accept-cookies" class="btn btn-secondary" type="button">Accept</button>
             </div>
         </div>
-    </div>
-    <div id="lead-capture-content" class="popup-content">
-        <button id="close-lead-form" class="close-button" type="button">×</button>
-        <img src="img/ampcast-logo.png" alt="Exclusive AmpCast Launch Offer" style="max-width: 80%; height: auto; margin-bottom: 15px; border-radius: 4px;">
-        <h2>AmpCast Launch Special: Scale Your Content & Traffic!</h2>
-        <p>Unlock cutting-edge strategies to maximize your AmpCast content amplification and drive massive organic traffic. Don't miss out!</p>
-        <form id="lead-capture-form" action="https://formspree.io/f/xvgajnqr" method="POST">
-            <div class="form-group">
-                <label for="email">Your email:</label>
-                <input type="email" id="email" name="email" placeholder="Your Email" required>
-            </div>
-            <div class="form-group">
-                <label for="name">Your name (optional):</label>
-                <input type="text" id="name" name="name" placeholder="Your Name">
-            </div>
-            <button type="submit">Get Exclusive Insights</button>
-        </form>
-        
-        <div id="form-message"></div>
+
+        <!-- Lead Capture Pop-up (correctly inside) -->
+        <div id="lead-capture-content" class="popup-content">
+            <button id="close-lead-form" class="close-button" type="button">×</button>
+            <img src="img/ampcast-logo.png" alt="Exclusive AmpCast Launch Offer" style="max-width: 80%; height: auto; margin-bottom: 15px; border-radius: 4px;">
+            <h2>AmpCast Launch Special: Scale Your Content & Traffic!</h2>
+            <p>Unlock cutting-edge strategies to maximize your AmpCast content amplification and drive massive organic traffic. Don't miss out!</p>
+            <form id="lead-capture-form" action="https://formspree.io/f/xvgajnqr" method="POST">
+                <div class="form-group">
+                    <label for="email">Your email:</label>
+                    <input type="email" id="email" name="email" placeholder="Your Email" required>
+                </div>
+                <div class="form-group">
+                    <label for="name">Your name (optional):</label>
+                    <input type="text" id="name" name="name" placeholder="Your Name">
+                </div>
+                <button type="submit">Get Exclusive Insights</button>
+            </form>
+            <div id="form-message"></div>
             <p class="mt-3"><a href="/ampcast.html" class="btn btn-secondary-outline">Learn More About AmpCast Benefits Here »</a></p>
         </div>
+
     </div>
 
+    <!-- The rest of your page starts here (header, etc.) -->
     <header class="site-header">
         <div class="container header-container">
             <div class="logo-area">
