--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <!-- Main stylesheet for the entire site -->
     <link rel="stylesheet" href="style.css">
     
-    <link rel="canonical" href="https://realmstoriches.github.io/">
+    <link rel="canonical" href="https://realmstoriches.xyz/">
 
  
     
