--- a/index.html
+++ b/index.html
@@ -541,7 +541,7 @@
 
     <script src="script.js"></script>
 
-    <script type="module" src="scripts/index.js"></script> <!-- React app's entry point -->
+    <script type="module" src="app/index.js"></script> <!-- React app's entry point -->
 
 </body>
 
