--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
     <div class="full-width-banner">
         <img src="img/bannerimage(2)-800w.webp" srcset="img/bannerimage(2)-400w.webp, img/bannerimage(2)-800w.webp, img/bannerimage(2)-1200w.webp" sizes="(max-width: 767px) 100vw, (max-width: 991px) 90vw, (max-width: 1199px) 80vw, 1200px" alt="Two entrepreneurs discussing online business strategies in a modern office">
     </div>
-    <div class="container section-padding" id="ai-concept-generator-tool-section">
+    <div class="container section-padding" id="ai-website-template-generation-tool-section">
     <div class="row">
         <div class="col-md-12">
             <div class="area text-center">
@@ -164,7 +164,7 @@
                 -->
                 <div id="ai-concept-app-container" class="ai-app-wrapper">
                     <iframe
-                        src="./ai_template_generator_app/index.html"
+                        src="./app/index.html"
                         title="AI Website Template Generator"
                         class="ai-app-iframe"
                         sandbox="allow-scripts allow-same-origin allow-forms allow-downloads"
