--- a/app/index.html
+++ b/app/index.html
@@ -107,7 +107,7 @@
       This script contains all the application logic. 
       The 'defer' attribute ensures it runs after the HTML is fully parsed.
     -->
-    <script src="></script>
+    <script src="index.js" defer></script>
 
 </body>
 </html>
