--- a/app/index.html
+++ b/app/index.html
@@ -87,7 +87,7 @@
             <h4 class="card-title">Template Variation</h4>
             <div class="preview-wrapper">
                 <!-- The sandbox attribute is a critical security feature! -->
-                <iframe class="preview-iframe" sandbox="allow-scripts allow-same-origin"></iframe>
+                <iframe class="preview-iframe" sandbox="allow-scripts allow-popups allow-forms allow-pointer-lock"></iframe>
             </div>
             <div class="download-area">
                 <p><strong>Download Files:</strong></p>
