--- a/index.html
+++ b/index.html
@@ -613,6 +613,7 @@
             <div class="footer-legal">
                 <p><a href="/terms-of-service.html" class="footer-link">Terms of Service</a></p>
                 <p><a href="/privacy-policy.html" class="footer-link">Privacy Policy</a></p>
+                <p><a href="/sitemap.xml" class="footer-link">Sitemap</a></p>
             </div>
         </div>
     </footer>
