--- a/index.html
+++ b/index.html
@@ -162,12 +162,13 @@
                   to create the dark, padded background for your app.
                 -->
                 <div id="ai-concept-app-container" class="ai-app-wrapper">
-                    <iframe
+                   <iframe
                         src="./app/index.html"
                         title="AI Website Template Generator"
                         class="ai-app-iframe"
-                        sandbox="allow-scripts allow-same-origin allow-forms allow-downloads"
-                    >
+                        sandbox="allow-scripts allow-forms allow-downloads">
+                        <p>Your browser does not support iframes. Please access the <a href="./app/index.html">AI Website Concept Generator directly</a>.</p>
+                   </iframe>
                         <!-- 
                           CORRECTED: The fallback link now also points to the correct /app/ folder.
                         -->
