--- a/index.html
+++ b/index.html
@@ -80,9 +80,7 @@
 
 <body>
 
-    <!-- CORRECTED STRUCTURE (Copy and paste this entire block) -->
-
-<body>
+    
 
     <div id="main-popup-container" class="popup-overlay">
         
@@ -118,7 +116,7 @@
         </div>
 
     </div>
-
+<main>    
     <!-- The rest of your page starts here (header, etc.) -->
     <header class="site-header">
         <div class="container header-container">
@@ -593,7 +591,7 @@
                 </div>
             </div>
         </div>
-    </main>
+</main>
 
     <div class="footer-legal">
         <p class="disclaimer">
