--- a/index.html
+++ b/index.html
@@ -156,13 +156,12 @@
                 <h2>AI Website Concept Generator</h2>
                 <p>Unleash creativity with our AI-powered tool. Describe your ideal website, and let our AI craft a unique concept for you, complete with a tagline, key pages, color schemes, and font suggestions. Perfect for kickstarting your next online project!</p>
                 <div id="ai-concept-app-container" class="ai-app-wrapper">
-                   <iframe>
+                   <iframe
                         src="./app/index.html"
                         title="AI Website Template Generator"
-                        class="ai-app-iframe"
-                   </iframe>     
-                   <p>Your browser does not support iframes. Please access the <a href="./app/index.html">AI Website Concept Generator directly</a>.</p>
-                       
+                        class="ai-app-iframe">    
+                        <p>Your browser does not support iframes. Please access the <a href="./app/index.html">AI Website Concept Generator directly</a>.</p>
+                   </iframe>    
                 </div>
             </div>
         </div>
