--- a/index.html
+++ b/index.html
@@ -144,9 +144,14 @@
             </nav>
         </div>
     </header>
-
     <div class="full-width-banner">
-        <img src="img/bannerimage(3)-600w.webp" srcset="img/bannerimage(3)-300w.webp, img/bannerimage(3)-900w.webp, img/bannerimage(3)-1200w.webp" sizes="(max-width: 767px) 100vw, (max-width: 991px) 90vw, (max-width: 1199px) 80vw, 1200px" alt="Two entrepreneurs discussing online business strategies in a modern office">
+        <img src="img/bannerimage(3)-300.webp" 
+            srcset="img/bannerimage(3)-300.webp 300w, 
+                img/bannerimage(3)-600.webp 600w, 
+                img/bannerimage(3)-900.webp 900w, 
+                img/bannerimage(3)-1200.webp 1200w"
+            sizes="(max-width: 767px) 90vw, 23vw"
+            alt="Realms to Riches brand representation of gears and clockworks representing its smooth functioning and trustworty business reputation">
     </div>
     
     <div class="container section-padding" id="ai-website-template-generation-tool-section">
